Fixed word-wrapping of comment in chat

--- a/src/frontend/styles/chat.less
+++ b/src/frontend/styles/chat.less
@@ -92,7 +92,7 @@
     padding: 5px;
   }
 
-  .message {
+  .comment {
     word-wrap: break-word;
   }
 
